k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
spec:
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
